internal/generator/output/interop_array.h

typedef struct {
    void* data;
    int length;
    int elementSize;
} GoArray;
typedef struct {
    uint64_t v0;
    bool v1;
} World_EntityHandle_Entity_Result;
typedef struct {
    uint64_t v0;
    bool v1;
} World_EntityRegistry_Lookup_Result;
typedef struct {
    uint64_t v0;
    bool v1;
} World_Tx_Liquid_Result;
char* Title_Title_ActionText(uint64_t self);
int64_t Title_Title_Duration(uint64_t self);
int64_t Title_Title_FadeInDuration(uint64_t self);
int64_t Title_Title_FadeOutDuration(uint64_t self);
char* Title_Title_Subtitle(uint64_t self);
char* Title_Title_Text(uint64_t self);
uint64_t Title_Title_WithActionText(uint64_t self, uint64_t p1);
uint64_t Title_Title_WithDuration(uint64_t self, int64_t p1);
uint64_t Title_Title_WithFadeInDuration(uint64_t self, int64_t p1);
uint64_t Title_Title_WithFadeOutDuration(uint64_t self, int64_t p1);
uint64_t Title_Title_WithSubtitle(uint64_t self, uint64_t p1);
uint64_t World_EntityAnimation_Ctor(void);
char* World_EntityAnimation_Controller(uint64_t self);
char* World_EntityAnimation_Name(uint64_t self);
char* World_EntityAnimation_NextState(uint64_t self);
char* World_EntityAnimation_StopCondition(uint64_t self);
uint64_t World_EntityAnimation_WithController(uint64_t self, char* p1);
uint64_t World_EntityAnimation_WithNextState(uint64_t self, char* p1);
uint64_t World_EntityAnimation_WithStopCondition(uint64_t self, char* p1);
uint64_t World_EntityData_Ctor(void);
uint64_t World_EntityHandle_Ctor(void);
uint64_t World_EntityHandle_Close(uint64_t self);
World_EntityHandle_Entity_Result World_EntityHandle_Entity(uint64_t self, uint64_t p1);
bool World_EntityHandle_ExecWorld(uint64_t self, uint64_t p1);
uint64_t World_EntityHandle_Type(uint64_t self);
GoArray World_EntityHandle_UUID(uint64_t self);
uint64_t World_EntityRegistry_Ctor(void);
uint64_t World_EntityRegistry_Config(uint64_t self);
World_EntityRegistry_Lookup_Result World_EntityRegistry_Lookup(uint64_t self, char* p1);
GoArray World_EntityRegistry_Types(uint64_t self);
uint64_t World_EntityRegistryConfig_Ctor(void);
uint64_t World_EntityRegistryConfig_New(uint64_t self, uint64_t p1);
uint64_t World_SetOpts_Ctor(void);
uint64_t World_Tx_Ctor(void);
uint64_t World_Tx_AddEntity(uint64_t self, uint64_t p1);
void World_Tx_AddParticle(uint64_t self, uint64_t p1, uint64_t p2);
uint64_t World_Tx_Biome(uint64_t self, uint64_t p1);
uint64_t World_Tx_Block(uint64_t self, uint64_t p1);
void World_Tx_BroadcastSleepingIndicator(uint64_t self);
void World_Tx_BroadcastSleepingReminder(uint64_t self, uint64_t p1);
void World_Tx_BuildStructure(uint64_t self, uint64_t p1, uint64_t p2);
uint64_t World_Tx_Entities(uint64_t self);
uint64_t World_Tx_EntitiesWithin(uint64_t self, uint64_t p1);
int World_Tx_HighestBlock(uint64_t self, int p1, int p2);
int World_Tx_HighestLightBlocker(uint64_t self, int p1, int p2);
uint8_t World_Tx_Light(uint64_t self, uint64_t p1);
World_Tx_Liquid_Result World_Tx_Liquid(uint64_t self, uint64_t p1);
void World_Tx_PlayEntityAnimation(uint64_t self, uint64_t p1, uint64_t p2);
void World_Tx_PlaySound(uint64_t self, uint64_t p1, uint64_t p2);
uint64_t World_Tx_Players(uint64_t self);
bool World_Tx_Raining(uint64_t self);
bool World_Tx_RainingAt(uint64_t self, uint64_t p1);
GoArray World_Tx_Range(uint64_t self);
uint64_t World_Tx_RemoveEntity(uint64_t self, uint64_t p1);
void World_Tx_ScheduleBlockUpdate(uint64_t self, uint64_t p1, uint64_t p2, int64_t p3);
void World_Tx_SetBiome(uint64_t self, uint64_t p1, uint64_t p2);
void World_Tx_SetBlock(uint64_t self, uint64_t p1, uint64_t p2, uint64_t p3);
void World_Tx_SetLiquid(uint64_t self, uint64_t p1, uint64_t p2);
uint8_t World_Tx_SkyLight(uint64_t self, uint64_t p1);
uint64_t World_Tx_Sleepers(uint64_t self);
bool World_Tx_SnowingAt(uint64_t self, uint64_t p1);
double World_Tx_Temperature(uint64_t self, uint64_t p1);
bool World_Tx_Thundering(uint64_t self);
bool World_Tx_ThunderingAt(uint64_t self, uint64_t p1);
GoArray World_Tx_Viewers(uint64_t self, uint64_t p1);
uint64_t World_Tx_World(uint64_t self);
uint64_t World_World_Ctor(void);
uint64_t World_World_Close(uint64_t self);
uint64_t World_World_DefaultGameMode(uint64_t self);
uint64_t World_World_Difficulty(uint64_t self);
uint64_t World_World_Dimension(uint64_t self);
uint64_t World_World_EntityRegistry(uint64_t self);
uint64_t World_World_Exec(uint64_t self, uint64_t p1);
void World_World_Handle(uint64_t self, uint64_t p1);
uint64_t World_World_Handler(uint64_t self);
char* World_World_Name(uint64_t self);
GoArray World_World_PlayerSpawn(uint64_t self, uint64_t p1);
uint64_t World_World_PortalDestination(uint64_t self, uint64_t p1);
GoArray World_World_Range(uint64_t self);